<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.tsh.starter.befw</groupId>
        <artifactId>befw</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../befw/pom.xml</relativePath>
    </parent>

    <groupId>com.tsh.starter.befw</groupId>
    <artifactId>befw-app-server</artifactId>
    <packaging>jar</packaging>
    <name>befw-app-server</name>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <module-name>befw</module-name>
        <service-name>app-server</service-name>

        <befw-lib-core>1.0.0-SNAPSHOT</befw-lib-core>
    </properties>

    <dependencies>

        <dependency>
            <groupId>com.tsh.starter.befw</groupId>
            <artifactId>befw-lib-core</artifactId>
            <version>${befw-lib-core}</version>
        </dependency>

    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>   <!-- 최신 버전 추천 -->
                <configuration>
                    <delimiters>
                        <delimiter>@</delimiter>
                    </delimiters>
                    <useDefaultDelimiters>false</useDefaultDelimiters>
                </configuration>
            </plugin>

            <!-- spring-boot-maven-plugin도 있으면 좋음 -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
